ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/571_function_type_undeclared_type_external.sol
contract C {
    fn a(fn(Nested) external) external pure {}
}
// ----
// DeclarationError 7920: (37-43): Identifier not found or not unique.
